# netlipy

./: .gitignore  setup.cfg
netlipy/: __init__.py  __main__.py  parsing.py  request.py  server.py
