[metadata]
name = netlipy
version = attr: __init__.VERSION
author = Raphaël Gomès
description = A Netltify dev server that handles redirects
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = netlify, flask
license = MIT License
classifiers =
    Operating System :: OS Independent
    Framework :: Flask
    Programming Language :: Python :: 3.7

[options]
install_requires =
    flask==1.0.2
python_requires = 3.7