[metadata]
name = netlipy
version = attr: netlipy.__init__.VERSION
author = Raphaël Gomès
description = A Netltify dev server that handles redirects
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = netlify, flask
license = MIT License
classifiers =
    Operating System :: OS Independent
    Framework :: Flask
    Programming Language :: Python :: 3.7

[options]
install_requires =
    flask==1.0.2
    click==7.0
python_requires = 3.7


[options.entry_points]
console-scripts =
    netlipy = netlipy.__main__:main